Bugfix: Corrected kbMenuToggler right alignment to always follow right side of content.

--- a/less/kb/navbar.less
+++ b/less/kb/navbar.less
@@ -24,7 +24,9 @@ body.showMenu #kbCanvasContainer{
     padding-top: 7px;
     margin-top:63px;
     margin-bottom:10px;
-    margin-right:15px;
+    @media (max-width: (@screen-sm-min - 1)){
+        margin-right: -15px;
+    }
     font-size:16px;
     text-align:center;
     vertical-align:middle;
